WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122817
REGRESSION: Crash in XMLDocumentParser::startElementNs
https://bugs.webkit.org/show_bug.cgi?id=122817
Summary
REGRESSION: Crash in XMLDocumentParser::startElementNs
Ryosuke Niwa
Reported
2013-10-14 23:54:55 PDT
REGRESSION: Crash in XMLDocumentParser::startElementNs
Attachments
Fixes the bug
(3.27 KB, patch)
2013-10-14 23:59 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2
(452.25 KB, application/zip)
2013-10-15 00:46 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-03 for mac-mountainlion
(477.77 KB, application/zip)
2013-10-15 01:07 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion
(466.61 KB, application/zip)
2013-10-15 02:03 PDT
,
Build Bot
no flags
Details
Add the forgotten resource file
(3.78 KB, patch)
2013-10-15 12:18 PDT
,
Ryosuke Niwa
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2013-10-14 23:59:05 PDT
Created
attachment 214236
[details]
Fixes the bug
Ryosuke Niwa
Comment 2
2013-10-15 00:00:25 PDT
Merge the test from
https://chromium.googlesource.com/chromium/blink/+/57afab5d21cccd89f032b9a3e62f3a61c6a0e9c2
The code change is not applicable to WebKit. I made a fix myself.
Radar WebKit Bug Importer
Comment 3
2013-10-15 00:00:58 PDT
<
rdar://problem/15228848
>
Build Bot
Comment 4
2013-10-15 00:46:25 PDT
Comment on
attachment 214236
[details]
Fixes the bug
Attachment 214236
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/4023072
New failing tests: fast/parser/xhtml-synchronous-detach-crash.html
Build Bot
Comment 5
2013-10-15 00:46:27 PDT
Created
attachment 214239
[details]
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-11 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 6
2013-10-15 01:07:39 PDT
Comment on
attachment 214236
[details]
Fixes the bug
Attachment 214236
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/3474126
New failing tests: fast/parser/xhtml-synchronous-detach-crash.html
Build Bot
Comment 7
2013-10-15 01:07:42 PDT
Created
attachment 214241
[details]
Archive of layout-test-results from webkit-ews-03 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-03 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 8
2013-10-15 02:03:26 PDT
Comment on
attachment 214236
[details]
Fixes the bug
Attachment 214236
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/4061058
New failing tests: fast/parser/xhtml-synchronous-detach-crash.html
Build Bot
Comment 9
2013-10-15 02:03:30 PDT
Created
attachment 214243
[details]
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-06 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Ryosuke Niwa
Comment 10
2013-10-15 12:18:03 PDT
Created
attachment 214292
[details]
Add the forgotten resource file
Ryosuke Niwa
Comment 11
2013-10-15 14:11:53 PDT
Committed
r157470
: <
http://trac.webkit.org/changeset/157470
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug